massive removal of aligning (since it has been added to css)

--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 
 <img src="/resources/pinkiepie.png" alt="pinkiepie">
 
-<p align="justify">I'm Pinkie Pie. You are seeing me because you want a page that I could not find. I'm sorry. Seriously. I'll try to work better. But now I may suggest you to return to the <a href="/">Home</a> or <a href="javascript:history.back()">back</a>.</p>
+<p>I'm Pinkie Pie. You are seeing me because you want a page that I could not find. I'm sorry. Seriously. I'll try to work better. But now I may suggest you to return to the <a href="/">Home</a> or <a href="javascript:history.back()">back</a>.</p>
 
       </section>
       <footer>
