--- a/authors.html
+++ b/authors.html
@@ -12,11 +12,11 @@ title: Authors
       </header>
       <section>
 
-<p align="justify">The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk">Beerware</a> license:</p>
-<blockquote><p align="justify">"THE BEER-WARE LICENSE" (Revision 42):<br>
+<p>The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk">Beerware</a> license:</p>
+<blockquote><p>"THE BEER-WARE LICENSE" (Revision 42):<br>
 Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.</p></blockquote>
 
-<p align="justify">This site uses:
+<p>This site uses:
   <ul>
     <li><a href="http://jekyllrb.com/">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT">MIT License</a>.</li>
     <li>The source theme was created by <a href="https://github.com/orderedlist/minimal">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
@@ -28,6 +28,6 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
   </ul>
 </p>
 
-<p align="justify">Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
+<p>Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
 
 <p align="center">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
