--- a/ru/404.html
+++ b/ru/404.html
@@ -28,7 +28,7 @@
 
 <img src="/resources/pinkiepie.png" alt="pinkiepie">
 
-<p align="justify">Я Пинки Пай. Ты видишь меня, потому что ты хочешь страницу, которую я не смогла найти. Мне очень жаль. Нет, честно-честно. В будущем я постараюсь работать лучше, а сейчас могу предложить вернуться на <a href="/ru">главную</a> или <a href="javascript:history.back()">назад</a>.</p>
+<p>Я Пинки Пай. Ты видишь меня, потому что ты хочешь страницу, которую я не смогла найти. Мне очень жаль. Нет, честно-честно. В будущем я постараюсь работать лучше, а сейчас могу предложить вернуться на <a href="/ru">главную</a> или <a href="javascript:history.back()">назад</a>.</p>
 
       </section>
       <footer>
