--- a/ru/authors.html
+++ b/ru/authors.html
@@ -13,12 +13,12 @@ title: Авторы
       </header>
       <section>
 
-<p align="justify">Код и контент данного сайта лицензирован под <a href="http://people.freebsd.org/~phk">Beerware</a>:</p>
-<blockquote><p align="justify">"THE BEER-WARE LICENSE" (Revision 42):<br>
+<p>Код и контент данного сайта лицензирован под <a href="http://people.freebsd.org/~phk">Beerware</a>:</p>
+<blockquote><p>"THE BEER-WARE LICENSE" (Revision 42):<br>
 Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.</p></blockquote>
-<p align="justify">(Ну, в общем, там про пиво говорится. Запомните, Вы должны мне пиво.)</p>
+<p>(Ну, в общем, там про пиво говорится. Запомните, Вы должны мне пиво.)</p>
 
-<p align="justify">Данный сайт использует:
+<p>Данный сайт использует:
   <ul>
     <li><a href="http://jekyllrb.com/">Jekyll</a>, который лицензирован под лицензией <a href="http://opensource.org/licenses/MIT">MIT</a>.</li>
     <li>Исходная тема была создана <a href="https://github.com/orderedlist/minimal">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
@@ -30,7 +30,7 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
   </ul>
 </p>
 
-<p align="justify">Отдельное спасибо <a href="http://monztruo.deviantart.com/">Monztruo</a>, я позаимствовал у него <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">иконку</a>.</p>
+<p>Отдельное спасибо <a href="http://monztruo.deviantart.com/">Monztruo</a>, я позаимствовал у него <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">иконку</a>.</p>
 
 <p align="center">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
 <p align="right"><small>Хотя, кого в России е%$т лицензии?</small></p>
