--- a/projects/queued.html
+++ b/projects/queued.html
@@ -10,7 +10,7 @@ links:
 ---
 <!-- info block -->
 <h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Information</h2>
-<p align="justify">Daemon for starting jobs to queue of calculations. It was written as proof-of-concept.</p>
+<p>Daemon for starting jobs to queue of calculations. It was written as proof-of-concept.</p>
 {% highlight bash %}
 $ queued --help
 Simple daemon written on BASH for starting jobs to queue of calculations
@@ -51,20 +51,20 @@ Parameters:
 
 <h3><a name="instruction" class="anchor" href="#instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li><p align="justify">Download an <a href="https://github.com/arcan1s/queued/releases">archive</a> with latest version of source files.</p></li>
-  <li><p align="justify">Extract it and install the application:</p>
+  <li><p>Download an <a href="https://github.com/arcan1s/queued/releases">archive</a> with latest version of source files.</p></li>
+  <li><p>Extract it and install the application:</p>
 {% highlight bash %}
 ./install.sh "/path/to/root/"
 {% endhighlight %}
-<p align="justify">If you want install it to <code>/</code> you must run it as root, e.g.:</p>
+<p>If you want install it to <code>/</code> you must run it as root, e.g.:</p>
 {% highlight bash %}
 sudo ./install.sh
 {% endhighlight %}
-<p align="justify">If no path is specified it will be installed to <code>/</code> by default.</p></li>
+<p>If no path is specified it will be installed to <code>/</code> by default.</p></li>
 </ul>
 
 <h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
-<p align="justify">I want note that all were tested on latest version of dependencies.</p>
+<p>I want note that all were tested on latest version of dependencies.</p>
 <ul>
   <li>Bash (including awk, grep, sed)</li>
   <li>systemd <i>(optional, service file)</i></li>
@@ -73,27 +73,27 @@ sudo ./install.sh
 
 <!-- howto block -->
 <h2><a name="howto" class="anchor" href="#howto"><span class="octicon octicon-link"></span></a>How to use</h2>
-<p align="justify">If you want to start the daemon just run</p>
+<p>If you want to start the daemon just run</p>
 {% highlight bash %}
 systemctl start queued
 {% endhighlight %}
-<p align="justify">If you want to enable daemon autoload run</p>
+<p>If you want to enable daemon autoload run</p>
 {% highlight bash %}
 systemctl enable queued
 {% endhighlight %}
-<p align="justify">But you may change path to configuration file or change parameters. To do it just copy (recommended) the source configuration file to new path</p>
+<p>But you may change path to configuration file or change parameters. To do it just copy (recommended) the source configuration file to new path</p>
 {% highlight bash %}
 cp /etc/queued.conf /path/to/new/queued.conf
 {% endhighlight %}
-<p align="justify">and edit it. Then copy the source service file to <code>/etc</code>:</p>
+<p>and edit it. Then copy the source service file to <code>/etc</code>:</p>
 {% highlight bash %}
 cp /usr/lib/systemd/system/queued.service /etc/systemd/system/queued-my-profile.service
 {% endhighlight %}
-<p align="justify">Replace following string in the file:</p>
+<p>Replace following string in the file:</p>
 {% highlight bash %}
 ExecStart=/usr/bin/queued
 {% endhighlight %}
-<p align="justify">to</p>
+<p>to</p>
 {% highlight bash %}
 ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
 {% endhighlight %}
@@ -105,10 +105,10 @@ ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
   <li>Create user file (<code>script.sh.user</code>) with the job username if it is needed.</li>
   <li>Copy files to <code>$WORKDIR</code>.</li>
 </ol>
-<p align="justify">Also you may use <code>add_queued</code>.</p>
+<p>Also you may use <code>add_queued</code>.</p>
 
 <h2><a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration</h2>
-<p align="justify">All settings are stored in <code>/etc/queued.conf</code>. After edit them you must restart daemon</p>
+<p>All settings are stored in <code>/etc/queued.conf</code>. After edit them you must restart daemon</p>
 {% highlight bash %}
 systemctl restart queued
 {% endhighlight %}
@@ -119,27 +119,27 @@ systemctl restart queued
 <table>
   <tr>
     <th>WORKDIR</th>
-    <td><p align="justify">Full path to directory with source jobs. Default is <code>/var/lib/queued/work</code>. This directory must contain source scripts <code>script-name</code>, a priority file (it is not necessary) <code>script-name.pr</code> and a file with username (it is not necessary too) <code>script-name.user</code>.</p></td>
+    <td><p>Full path to directory with source jobs. Default is <code>/var/lib/queued/work</code>. This directory must contain source scripts <code>script-name</code>, a priority file (it is not necessary) <code>script-name.pr</code> and a file with username (it is not necessary too) <code>script-name.user</code>.</p></td>
   </tr>
   <tr>
     <th>JOBDIR</th>
-    <td><p align="justify">Full path to directory with running jobs. Default is <code>/var/lib/queued/job</code>. All job files will be moved here.</p></td>
+    <td><p>Full path to directory with running jobs. Default is <code>/var/lib/queued/job</code>. All job files will be moved here.</p></td>
   </tr>
   <tr>
     <th>QUEUEFILE</th>
-    <td><p align="justify">Full path to file with queue list. Default is <code>/var/lib/queued/queue</code>.</td>
+    <td><p>Full path to file with queue list. Default is <code>/var/lib/queued/queue</code>.</td>
   </tr>
   <tr>
     <th>PRIORITY</th>
-    <td><p align="justify">Default priority. Default is <code>0</code>. The higher the value, the higher the priority of the task.</td>
+    <td><p>Default priority. Default is <code>0</code>. The higher the value, the higher the priority of the task.</td>
   </tr>
   <tr>
     <th>SLEEPTIME</th>
-    <td><p align="justify">Time interval in minutes. Default is <code>5</code>.</td>
+    <td><p>Time interval in minutes. Default is <code>5</code>.</td>
   </tr>
   <tr>
     <th>STARTASUSER</th>
-    <td><p align="justify">Default user. Default is <code>root</code>. This user will own created files.</td>
+    <td><p>Default user. Default is <code>root</code>. This user will own created files.</td>
   </tr>
 </table>
 <!-- end of config block -->
