--- a/ru/about.html
+++ b/ru/about.html
@@ -37,28 +37,28 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 <p align="center"><a href="/resources/screenshots/photo_siicm.png"><img src="/resources/preview/photo_siicm_prev.jpg"></a></p>
 <p align="right"><i>Фото Гриневой О.В.</i></p>
 
-<p align="justify">Меня зовут Алексеев Евгений, <a href="http://lurkmore.to/%D0%9C%D0%BD%D0%B5_20_%D0%B8_%D1%8F_%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0%D1%82">мне 20 и я бородат</a>. Обычно, мой никнейм в Интернете <code>arcan1s</code>, хотя в русскоязычном сегменте - <code>arcanis</code>. Я выпускник <a href="http://www.chem.msu.ru/">Химического факультета</a> Московского государственного университета. Сейчас я аспирант и работаю в моем Университете. Моя специальность - теоретическая химия (типа молекулярной физики и немного квантовой химии).</p>
+<p>Меня зовут Алексеев Евгений, <a href="http://lurkmore.to/%D0%9C%D0%BD%D0%B5_20_%D0%B8_%D1%8F_%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0%D1%82">мне 20 и я бородат</a>. Обычно, мой никнейм в Интернете <code>arcan1s</code>, хотя в русскоязычном сегменте - <code>arcanis</code>. Я выпускник <a href="http://www.chem.msu.ru/">Химического факультета</a> Московского государственного университета. Сейчас я аспирант и работаю в моем Университете. Моя специальность - теоретическая химия (типа молекулярной физики и немного квантовой химии).</p>
 
-<p align="justify">На досуге я пишу небольшие приложения на C, C++ и Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="http://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD">Роберта Джордана</a> или <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="ftp://repo.arcanis.name/">моем домашнем сервере</a>.</p>
+<p>На досуге я пишу небольшие приложения на C, C++ и Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="http://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD">Роберта Джордана</a> или <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="ftp://repo.arcanis.name/">моем домашнем сервере</a>.</p>
 <label class="spoiler">
 <input type="checkbox" tabindex="-1">
   <div class="box">
-    <p align="justify">Информация по подключению
+    <p>Информация по подключению
     <blockquote>
       Пользователь <code>music</code>, пароль такой же.</p>
     </blockquote>
   </div>
 </label>
 
-<p align="justify">Также я являюсь пользователем <a href="https://www.archlinux.org/">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
+<p>Также я являюсь пользователем <a href="https://www.archlinux.org/">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
 <blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">
 The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.</blockquote>
 <p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">ArchWiki</a></p>
 
-<p align="justify">Вся контактная информация может быть найдена слева. Не стесняйтесь связываться со мной по любому вопросу (если что - пошлю). Ах да, чуть не забыл. Если Вы будете писать мне через ICQ или Jabber, Вы должны корректно ответить на вопрос антиспам бота. Вопрос:</p>
+<p>Вся контактная информация может быть найдена слева. Не стесняйтесь связываться со мной по любому вопросу (если что - пошлю). Ах да, чуть не забыл. Если Вы будете писать мне через ICQ или Jabber, Вы должны корректно ответить на вопрос антиспам бота. Вопрос:</p>
 {% highlight c %}
 int i = 1;
 i = ++i + ++i;
 return i;
 {% endhighlight %}
-<p align="justify">Правильный ответ <code>5</code> (или <code>6</code>, как больше нравится).</p>
+<p>Правильный ответ <code>5</code> (или <code>6</code>, как больше нравится).</p>
