--- a/ru/projects/queued.html
+++ b/ru/projects/queued.html
@@ -11,7 +11,7 @@ links:
 ---
 <!-- info block -->
 <h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Информация</h2>
-<p align="justify">Демон для запуска задач в очередь вычислений. Был создан, как proof-of-concept.</p>
+<p>Демон для запуска задач в очередь вычислений. Был создан, как proof-of-concept.</p>
 {% highlight bash %}
 $ queued --help
 Simple daemon written on BASH for starting jobs to queue of calculations
@@ -52,20 +52,20 @@ Parameters:
 
 <h3><a name="instruction" class="anchor" href="#instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li><p align="justify">Скачайте <a href="https://github.com/arcan1s/queued/releases">архив</a> с актуальной версией исходных файлов.</p></li>
-  <li><p align="justify">Извлеките из него файлы и установите приложение:</p>
+  <li><p>Скачайте <a href="https://github.com/arcan1s/queued/releases">архив</a> с актуальной версией исходных файлов.</p></li>
+  <li><p>Извлеките из него файлы и установите приложение:</p>
 {% highlight bash %}
 ./install.sh "/путь/к/корню/"
 {% endhighlight %}
-<p align="justify">Если Вы хотите установить в <code>/</code>, Вы должны запустить это, как root:</p>
+<p>Если Вы хотите установить в <code>/</code>, Вы должны запустить это, как root:</p>
 {% highlight bash %}
 sudo ./install.sh
 {% endhighlight %}
-<p align="justify">Если путь не указан, пакет будет установлен в <code>/</code>.</p></li>
+<p>Если путь не указан, пакет будет установлен в <code>/</code>.</p></li>
 </ul>
 
 <h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Зависимости</h3>
-<p align="justify">Все было протестировано на последних версиях зависимостей.</p>
+<p>Все было протестировано на последних версиях зависимостей.</p>
 <ul>
   <li>Bash (включая awk, grep, sed)</li>
   <li>systemd <i>(опционально, service-файл)</i></li>
@@ -74,27 +74,27 @@ sudo ./install.sh
 
 <!-- howto block -->
 <h2><a name="howto" class="anchor" href="#howto"><span class="octicon octicon-link"></span></a>Использование</h2>
-<p align="justify">Если Вы хотите запустить демон, просто запустите</p>
+<p>Если Вы хотите запустить демон, просто запустите</p>
 {% highlight bash %}
 systemctl start queued
 {% endhighlight %}
-<p align="justify">Если Вы хотите включить автозагрузку демона, запутите</p>
+<p>Если Вы хотите включить автозагрузку демона, запутите</p>
 {% highlight bash %}
 systemctl enable queued
 {% endhighlight %}
-<p align="justify">Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для этого, скопируйте (рекомендуется) исходный конфигурационный файл</p>
+<p>Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для этого, скопируйте (рекомендуется) исходный конфигурационный файл</p>
 {% highlight bash %}
 cp /etc/queued.conf /новый/путь/к/queued.conf
 {% endhighlight %}
-<p align="justify">и отредактируйте его. Затем скопируйте исходный service-файл в <code>/etc</code>:</p>
+<p>и отредактируйте его. Затем скопируйте исходный service-файл в <code>/etc</code>:</p>
 {% highlight bash %}
 cp /usr/lib/systemd/system/queued.service /etc/systemd/system/queued-my-profile.service
 {% endhighlight %}
-<p align="justify">Замените следующую строку в этом файле:</p>
+<p>Замените следующую строку в этом файле:</p>
 {% highlight bash %}
 ExecStart=/usr/bin/queued
 {% endhighlight %}
-<p align="justify">на</p>
+<p>на</p>
 {% highlight bash %}
 ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
 {% endhighlight %}
@@ -106,10 +106,10 @@ ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
   <li>Создайте файл с именем пользователя (<code>script.sh.user</code>) для данной задачи, если это необходимо</li>
   <li>Скопируйте файлы в <code>$WORKDIR</code></li>
 </ol>
-<p align="justify">Также Вы можете воспользоваться <code>add_queued</code>.</p>
+<p>Также Вы можете воспользоваться <code>add_queued</code>.</p>
 
 <h2><a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Настройка</h2>
-<p align="justify">Все настройки хранятся в <code>/etc/queued.conf</code>. После редактирования, Вы должны перезапустить демон</p>
+<p>Все настройки хранятся в <code>/etc/queued.conf</code>. После редактирования, Вы должны перезапустить демон</p>
 {% highlight bash %}
 systemctl restart queued
 {% endhighlight %}
@@ -120,27 +120,27 @@ systemctl restart queued
 <table>
   <tr>
     <th>WORKDIR</th>
-    <td><p align="justify">Полный путь к директории с исходными файлами задач. По умолчанию <code>/var/lib/queued/work</code>. Эта директория должна содержать исходные скрипты <code>script-name</code>, файл с приоритетом (если необходимо) <code>script-name.pr</code> и файл с именем пользователя (если необходимо) <code>script-name.user</code>.</p></td>
+    <td><p>Полный путь к директории с исходными файлами задач. По умолчанию <code>/var/lib/queued/work</code>. Эта директория должна содержать исходные скрипты <code>script-name</code>, файл с приоритетом (если необходимо) <code>script-name.pr</code> и файл с именем пользователя (если необходимо) <code>script-name.user</code>.</p></td>
   </tr>
   <tr>
     <th>JOBDIR</th>
-    <td><p align="justify">Полный путь к директории с запущенными задачами. По умолчанию <code>/var/lib/queued/job</code>. Все файлы будут перемещены сюда.</p></td>
+    <td><p>Полный путь к директории с запущенными задачами. По умолчанию <code>/var/lib/queued/job</code>. Все файлы будут перемещены сюда.</p></td>
   </tr>
   <tr>
     <th>QUEUEFILE</th>
-    <td><p align="justify">Полный путь к файлу с очередью вычислений. По умолчанию <code>/var/lib/queued/queue</code>.</td>
+    <td><p>Полный путь к файлу с очередью вычислений. По умолчанию <code>/var/lib/queued/queue</code>.</td>
   </tr>
   <tr>
     <th>PRIORITY</th>
-    <td><p align="justify">Стандартный приоритет. По умолчанию <code>0</code>. Чем выше значение, тем выше приоритет задачи.</td>
+    <td><p>Стандартный приоритет. По умолчанию <code>0</code>. Чем выше значение, тем выше приоритет задачи.</td>
   </tr>
   <tr>
     <th>SLEEPTIME</th>
-    <td><p align="justify">Интервал обновлений в минутах. По умолчанию <code>5</code>.</td>
+    <td><p>Интервал обновлений в минутах. По умолчанию <code>5</code>.</td>
   </tr>
   <tr>
     <th>STARTASUSER</th>
-    <td><p align="justify">Стандартное имя пользователя. По умолчанию <code>root</code>. Именно данному пользователю будут принадлежать все созданные файлы.</td>
+    <td><p>Стандартное имя пользователя. По умолчанию <code>root</code>. Именно данному пользователю будут принадлежать все созданные файлы.</td>
   </tr>
 </table>
 <!-- end of config block -->
